Fix styling on narrow screens

--- a/student-selector/style.css
+++ b/student-selector/style.css
@@ -60,6 +60,7 @@ button {
   color: rgb(248, 248, 242);
   font-family: monospace;
   font-size: 24px;
+  overflow: hidden;
 }
 
 #main-ui .students .student.pool-in {
